fix newsfeed spacing and font size issue (#114)

--- a/blocks/newslist/newslist.css
+++ b/blocks/newslist/newslist.css
@@ -40,9 +40,12 @@
   font-family: var(--header-font-family);
   font-size: var(--body-font-size-xxs);
   color: #000;
-  margin-bottom: 20px;
   padding: 0 0 20px;
-  line-height: 1.83;
+  line-height: 1.6;
+}
+
+.newslist .newslist-container .newslist-item .newslist-item-description p {
+  margin-bottom: 0;
 }
 
 .newslist .newslist-container .newslist-item .newslist-item-footer a {
@@ -50,7 +53,6 @@
   text-transform: uppercase;
   font-size: var(--body-font-size-xs);
   font-weight: 600;
-  color: var(--link-color);
 }
 
 .newslist .newslist-container .newslist-item .newslist-item-footer a .read-more-arrow {
@@ -424,6 +426,19 @@
 
   .newslist .newslist-pagination-container a.current-page {
     color: var(--link-color);
+  }
+
+  .newslist .newslist-container .newslist-item h4 a {
+    font-size: 20px;
+  }
+
+  .newslist .newslist-container .newslist-item .newslist-item-description {
+    font-size: var(--body-font-size-xs);
+    margin-bottom: 20px;
+  }
+
+  .newslist .newslist-container .newslist-item .newslist-item-description p {
+    margin-bottom: 1em;
   }
 }
 
